<resources>
    <string name="app_name">Панов Сергей</string>
    <string name="about_text">Текст (от лат. textus — «ткань; сплетение, связь, паутина, сочетание») — зафиксированная на каком-либо материальном носителе человеческая мысль; в общем плане связная и полная последовательность символов. Существуют две основные трактовки понятия «текст»: «имманентная» (расширенная, философски нагруженная) и «репрезентативная» (более частная). Имманентный подход подразумевает отношение к тексту как к автономной реальности, нацеленность на выявление его внутренней структуры. Репрезентативный — рассмотрение текста как особой формы представления знаний о внешней тексту действительности. В лингвистике термин текст используется в широком значении, включая и образцы устной речи. Восприятие текста изучается в рамках лингвистики текста и психолингвистики. Так, например, И. Р. Гальперин определяет текст следующим образом: «это письменное сообщение, объективированное в виде письменного документа, состоящее из ряда высказываний, объединённых разными типами лексической, грамматической и логической связи, имеющее определённый моральный характер, прагматическую установку и соответственно литературно обработанное»</string>
    <string name="repositoriy_hint">Репозиторий</string>
    <string name="vk_hint">Профиль в VK</string>
    <string name="mail_hint">Электронная почта</string>
    <string name="phone_hint">Мобильный телефон</string>
    <string name="rating_value">5</string>
    <string name="rating_text">Рейтинг</string>
    <string name="code_written_text">Написано строк кода</string>
    <string name="code_written_value">5</string>
    <string name="project_text">Проектов</string>
    <string name="project_value">5</string>
    <string name="phone_value_et">89288439703</string>
    <string name="mail_value_et">srgpanov@yandex.ru</string>
    <string name="vk_value_et">vk.com/id370865420</string>
    <string name="repositoriy_value_et">github.com/srgpanov/DevIntensive</string>
    <string name="about_et_hint">О себе</string>
    <string name="user_profile_placeholder_image">Изменить фотографию пользователя</string>
    <string name="user_profile_dialog_gallery">Загрузить из галлерии</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_chose_message">выберите фото</string>
    <string name="login_header">ВОЙТИ</string>
    <string name="login_mail_et_hint">E-Mail:</string>
    <string name="login_password_et_hint">Пароль</string>
    <string name="login_btn">Войти</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="validation_msg_phone">Некоректный данные. Формат ввода +x xxx xxx-xx-xx</string>
    <string name="validation_msg_email">Некоректные данные. Формат ввода  xxx@xx.xx</string>
    <string name="validation_msg_vk">Некоректные данные. Формат ввода vk.com/ххх</string>
    <string name="validation_msg_git">Некоректные данные. Формат ввода github.com/ххх</string>
    <string name="drawer_header_user_name">Панов Сергей</string>
    <string name="hint_search">Поиск</string>
</resources>
