<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tablet_title_80"
        android:orientation="horizontal"
        android:background="@color/grey">
        <LinearLayout
            style="@style/liner_layout_grey_top"
            android:layout_weight="0.25"            >
            <TextView
                android:id="@+id/rating_value_txt"
                style="@style/text_field_grey.24sp"
                android:text="@string/rating_value"/>
            <TextView
                style="@style/text_field_grey.14sp"
                android:text="@string/rating_text"/>
        </LinearLayout>
        <View
            style="@style/view_separator_vertical"/>
        <LinearLayout
            style="@style/liner_layout_grey_top"
            android:layout_weight="0.5"
            >
            <TextView
                android:id="@+id/code_lines_value_txt"
                style="@style/text_field_grey.24sp"
                android:text="@string/code_written_value"/>
            <TextView
                style="@style/text_field_grey.14sp"
                android:text="@string/code_written_text"/>
        </LinearLayout>
        <View
            style="@style/view_separator_vertical"/>
        <LinearLayout
            style="@style/liner_layout_grey_top"
            android:layout_weight="0.25"            >
            <TextView
                android:id="@+id/project_value_txt"
                style="@style/text_field_grey.24sp"
                android:text="@string/project_value"/>
            <TextView
                style="@style/text_field_grey.14sp"
                android:text="@string/project_text"/>
        </LinearLayout>
    </LinearLayout>

            <ListView
                android:id="@+id/repozitories_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            </ListView>

    <View
        style="@style/view_separator_horizontal"/>
    <LinearLayout
        style="@style/liner_layout_item_horizontal">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/account_circle"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginStart="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/about_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/about_et_hint"
                    android:text="@string/about_text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        style="@style/view_separator_horizontal"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
