<?xml version="1.0" encoding="utf-8"?>
<app:LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.activities.MainActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/tablet_title_80"
                android:orientation="horizontal"
                android:background="@color/grey">
                <LinearLayout
                    style="@style/liner_layout_grey_top"
                    android:layout_weight="0.25"            >
                    <TextView
                        android:id="@+id/rating_value_txt"
                        style="@style/text_field_grey.24sp"
                        android:text="@string/rating_value"/>
                    <TextView
                        style="@style/text_field_grey.14sp"
                        android:text="@string/rating_text"/>
                </LinearLayout>
                <View
                    style="@style/view_separator_vertical"/>
                <LinearLayout
                    style="@style/liner_layout_grey_top"
                    android:layout_weight="0.5"
                    >
                    <TextView
                        android:id="@+id/code_lines_value_txt"
                        style="@style/text_field_grey.24sp"
                        android:text="@string/code_written_value"/>
                    <TextView
                        style="@style/text_field_grey.14sp"
                        android:text="@string/code_written_text"/>
                </LinearLayout>
                <View
                    style="@style/view_separator_vertical"/>
                <LinearLayout
                    style="@style/liner_layout_grey_top"
                    android:layout_weight="0.25"            >
                    <TextView
                        android:id="@+id/project_value_txt"
                        style="@style/text_field_grey.24sp"
                        android:text="@string/project_value"/>
                    <TextView
                        style="@style/text_field_grey.14sp"
                        android:text="@string/project_text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/liner_layout_item_horizontal">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"
                    />
                <LinearLayout
                    style="@style/liner_layout_item_text_vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et"
                            style="@style/item_edit_text"
                            android:hint="@string/phone_hint"
                            android:inputType="phone"
                            android:text="@string/phone_value_et"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:id="@+id/make_call_img"
                    android:src="@drawable/ic_phone_in_talk_black_24dp">
                </ImageView>
            </LinearLayout>
            <View
                style="@style/view_separator_horizontal"/>
            <LinearLayout
                style="@style/liner_layout_item_horizontal">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_send_black_24dp"
                    />
                <LinearLayout
                    style="@style/liner_layout_item_text_vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/mail_et"
                            style="@style/item_edit_text"
                            android:hint="@string/mail_hint"
                            android:inputType="textEmailAddress"
                            android:text="@string/mail_value_et"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:id="@+id/send_mail_img"
                    android:src="@drawable/ic_mail_black_24dp">
                </ImageView>
            </LinearLayout>
            <View
                style="@style/view_separator_horizontal"/>
            <LinearLayout
                style="@style/liner_layout_item_horizontal">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk_circle"/>
                <LinearLayout
                    style="@style/liner_layout_item_text_vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/vk_et"
                            style="@style/item_edit_text"
                            android:hint="@string/vk_hint"
                            android:text="@string/vk_value_et"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:id="@+id/go_vk_img"
                    android:src="@drawable/eye">
                </ImageView>
            </LinearLayout>
            <View
                style="@style/view_separator_horizontal"/>
            <LinearLayout
                style="@style/liner_layout_item_horizontal">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/github_circle"
                    />
                <LinearLayout
                    style="@style/liner_layout_item_text_vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/repozitoriy_et"
                            style="@style/item_edit_text"
                            android:hint="@string/repositoriy_hint"
                            android:text="@string/repositoriy_value_et"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:id="@+id/go_git_img"
                    android:src="@drawable/eye">
                </ImageView>
            </LinearLayout>
            <View
                style="@style/view_separator_horizontal"/>
            <LinearLayout
                style="@style/liner_layout_item_horizontal">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/account_circle"
                    />
                <LinearLayout
                    style="@style/liner_layout_item_text_vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/about_et"
                            style="@style/item_edit_text"
                            android:hint="@string/about_et_hint"
                            android:text="@string/about_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <View
                style="@style/view_separator_horizontal"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</app:LinearLayout>