<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center"
    android:padding="@dimen/spacing_larger_72">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_medial_24"
            android:paddingBottom="@dimen/spacing_medial_24"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:id="@+id/split"
                    android:layout_width="5dp"
                    android:layout_height="@dimen/spacing_medial_24"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/red"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_header"
                    android:id="@+id/textView"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingRight="@dimen/spacing_medial_24"/>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_normal_16"
                android:paddingLeft="@dimen/spacing_medial_24"
                android:paddingRight="@dimen/spacing_medial_24">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_light"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/login_mail_et_hint"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medial_24"
                android:paddingLeft="@dimen/spacing_medial_24"
                android:paddingRight="@dimen/spacing_medial_24">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_light"
                    android:hint="@string/login_password_et_hint"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:textColor="@color/white"
                android:background="@color/red"
                android:paddingLeft="@dimen/spacing_medium_32"
                android:paddingRight="@dimen/spacing_medium_32"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_password"
                android:textColor="@color/grey_light"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:paddingLeft="@dimen/spacing_medial_24"
                android:paddingRight="@dimen/spacing_medial_24"/>



        </LinearLayout>
    </RelativeLayout>