<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg"
        android:fitsSystemWindows="true">

                <android.support.v7.widget.CardView
                    android:id="@+id/authorization_box"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity = "center"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="@dimen/spacing_normal_16"
                            android:paddingTop="@dimen/spacing_medium_32">
                            <View
                                 android:id="@+id/split"
                                 android:layout_width="4dp"
                                 android:layout_height="match_parent"
                                 android:layout_marginRight="20dp"
                                 android:background="@color/color_accent"/>
                            <TextView
                                 android:id="@+id/login_txt"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/login_header"
                                 android:textColor="@color/color_accent"
                                 android:textSize="@dimen/font_medium_20"
                                 android:fontFamily="sans-serif-medium"
                                 android:paddingBottom="@dimen/spacing_small_8"
                                 android:paddingTop="@dimen/spacing_small_8"
                                 android:textAllCaps="true"/>
                        </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/spacing_medial_24"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingBottom="@dimen/spacing_medial_24">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wrap_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/login_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_small_14"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/login_mail_et_hint"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wrap_password_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="@dimen/font_small_14"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:hint="@string/login_password_et_hint"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_small_14"
                    android:text="@string/login_btn"
                    android:textColor="@color/grey"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:minWidth="126dp"
                    android:textAllCaps="true"
                    android:theme="@style/AppTheme.Button.Red"
                    style="@style/AppTheme.Button.Red"/>
                <TextView
                    android:id="@+id/remember_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/font_small_14"/>

                    </LinearLayout>
                    </LinearLayout>
            </android.support.v7.widget.CardView>






    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>